--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a href="#contact">Contact</a>
 </div>
 </div>
-<h2 class="process">Process</h3>
+<h2 class="process">Our Process</h3>
   <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
 <h3 class="identity">Identity</h3>
   <p>We focus on the most important details.</p>
@@ -29,5 +29,23 @@
 <div class="newyork">
   <P>Designed in New York</p>
 </div>
-  </body>
+<h3 class="portfolio">Portfolio</h3>
+<p>Coming Soon</p>
+<h3 class="team">Team</h3>
+<p>We're Hiring"</p>
+<h3 class="contact">Contact</h3>
+<p>Phone: (555)-555-5555<p/>
+<p>E-mail: test@example.com</p>
+<p>Twitter: @test</p>
+</body>
+<footer>
+  <div class="nav">
+    <h4>© Broadway 2017</h4>
+    <a href="#home">Home</a>
+    <a href="#process">Process</a>
+    <a href="#work">Work</a>
+    <a href="#team">Team</a>
+    <a href="#contact">Contact</a>
+  </div>
+</footer>
 </html>
